# files-rs

./: .editorconfig  .gitattributes  .gitignore  .npmignore  Cargo.toml  README.md  biome.json  bun.lockb  bunfig.toml  deno.json  jest.config.ts  jsr.json  package-lock.json  package.json  some.yaml  tsconfig.json  tsup.config.ts
.github/workflows/: CI.yml  build.yml  publish.yml  some.yml
bindings-dist/bindings-dist/: chunk-4TCID4PF.js  chunk-SYT4PYHA.cjs  index.cjs  index.d.cts  index.js  javascript.cjs  javascript.d.cts  javascript.js
lib/: bun.sh  bun.ts  package.json  tester.cjs  tester.d.ts  tester.js  tester.mjs  tester_type.d.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  (+1 more)
scripts/: clean-package.ts  copy_one_file.test.ts  packetManager.sh  posttsup.ts  prepublish.ts  pretsup.ts  tester.cjs  tester.sh  tsup.config.ts
src/: index.ts  javascript.ts  js.ts  lib.rs  main.ts
test/: copy.test.ts  copy_many_files.test.ts  copy_one.test.ts  copy_one_file.test.ts  tester.config.ts  tester.d.ts  tsconfig.json
(+6 files in other folders)
